# routes/authRoutes.js
@@ -9,14 +9,12 @@ const { validationRules: passwordValidationRules, validate: passwordValidate } =
 // const { uploadImage } = require("../controllers/uploadController");
 
 router.post("/login", async (req, res) => {
-    /*
-        #swagger.tags = ['Auth']
-        #swagger.parameters['obj] = {
+    /*  #swagger.tags = ['Auth']
+    	#swagger.parameters['obj'] = {
             in: 'body',
             required: true,
-            scheme: { $ref: '#/definitions/LoginModel' }
-        }
-    */
+            schema: { $ref: "#/definitions/LoginModel" }
+    } */
 
     await login(req.body, res);
 });
@@ -26,22 +24,60 @@ router.get("/logout", async (req, res) => {
 });
 
 router.post("/register", validationRules(), validate, async (req, res) => {
+    /*  #swagger.tags = ['Auth']
+    	#swagger.parameters['obj'] = {
+            in: 'body',
+            required: true,
+            schema: { $ref: "#/definitions/RegisterModel" }
+    } */
+    
     await register(req.body, "user", res);
 });
 
 router.post("/verify", async (req, res) => {
+    /*  #swagger.tags = ['Auth']
+    	#swagger.parameters['obj'] = {
+            in: 'body',
+            required: true,
+            schema: { $ref: "#/definitions/VerifyEmailModel" }
+    } */
+
     await verify(req.body, res);
 });
 
 router.post("/forgotPassword", async (req, res) => {
+    /*  #swagger.tags = ['Auth']
+    	#swagger.parameters['obj'] = {
+            in: 'body',
+            required: true,
+            schema: { $ref: "#/definitions/ForgotPassWordModel" }
+    } */
+
     await forgotPassword(req.body, res);
 });
 
 router.post("/resetPassword", async (req, res) => {
+    /*  #swagger.tags = ['Auth']
+    	#swagger.parameters['obj'] = {
+            in: 'body',
+            required: true,
+            schema: { $ref: "#/definitions/ResetPasswordModel" }
+    } */
+
     await resetPassword(req.body, res);
 });
 
 router.post("/changePassword", ensureAuthenticated, async (req, res) => {
+    /*  #swagger.tags = ['Auth']
+        #swagger.security = [{
+        "Authorization": []
+        }]
+    	#swagger.parameters['obj'] = {
+            in: 'body',
+            required: true,
+            schema: { $ref: "#/definitions/ChangePasswordModel" }
+    } */   
+    
     await changePassword(req.body, res);
 });
 
