# routes/categoriesRoutes.js
@@ -4,22 +4,52 @@ const { ensureAuthenticated, ensureAuthorized } = require("../middleware/authMid
 const { getAll, getOne, addOne, updateOne, removeOne } = require("../controllers/categoriesController");
 
 router.get("/categories", async (req, res) => {
+    // #swagger.tags = ['Posts']
+
     await getAll(req, res);
 });
 
 router.get("/categories/:id", async (req, res) => {
+    // #swagger.tags = ['Posts'] 
+
     await getOne(req, res);
 });
 
 router.post("/categories", ensureAuthenticated, ensureAuthorized(["admin"]), async (req, res) => {
+    /*  #swagger.tags = ['Posts']
+        #swagger.security = [{
+        "Authorization": []
+        }]
+    	#swagger.parameters['obj'] = {
+            in: 'body',
+            required: true,
+            schema: { $ref: "#/definitions/CategoryModel" }
+    } */  
+    
     await addOne(req, res);
 });
 
 router.put("/categories/:id", ensureAuthenticated, ensureAuthorized(["admin"]), async (req, res) => {
+    /*  #swagger.tags = ['Posts']
+        #swagger.security = [{
+        "Authorization": []
+        }]
+    	#swagger.parameters['obj'] = {
+            in: 'body',
+            required: true,
+            schema: { $ref: "#/definitions/CategoryModel" }
+    } */  
+    
     await updateOne(req, res);
 });
 
 router.delete("/categories/:id", ensureAuthenticated, ensureAuthorized(["admin"]), async (req, res) => {
+    /*  #swagger.tags = ['Posts']
+        #swagger.security = [{
+        "Authorization": []
+        }]
+    */ 
+    
     await removeOne(req, res);
 });
 
