# routes/commentsRoutes.js
@@ -4,10 +4,26 @@ const { ensureAuthenticated, ensureAuthorized } = require("../middleware/authMid
 const { addOne, removeOne } = require("../controllers/commentsController");
 
 router.post("/comments", ensureAuthenticated, async (req, res) => {
+    /*  #swagger.tags = ['Posts']
+        #swagger.security = [{
+        "Authorization": []
+        }]
+    	#swagger.parameters['obj'] = {
+            in: 'body',
+            required: true,
+            schema: { $ref: "#/definitions/CommentModel" }
+    } */  
+    
     await addOne(req, res);
 });
 
 router.delete("/comments/:id", ensureAuthenticated, async (req, res) => {
+    /*  #swagger.tags = ['Posts']
+        #swagger.security = [{
+        "Authorization": []
+        }]
+    */ 
+    
     await removeOne(req, res);
 });
 
