# routes/profileRoutes.js
@@ -4,10 +4,26 @@ const { ensureAuthenticated } = require("../middleware/authMiddleware");
 const { getOne, updateOne } = require("../controllers/profileController");
 
 router.get("/profile", ensureAuthenticated, async (req, res) => {
+    /*  #swagger.tags = ['Profile']
+        #swagger.security = [{
+        "Authorization": []
+        }]
+    */ 
+    
     await getOne(req, res);
 });
 
 router.put("/profile", ensureAuthenticated, async (req, res) => {
+    /*  #swagger.tags = ['Profile']
+        #swagger.security = [{
+        "Authorization": []
+        }]
+    	#swagger.parameters['obj'] = {
+            in: 'body',
+            required: true,
+            schema: { $ref: "#/definitions/UpdateUserModel" }
+    } */ 
+    
     await updateOne(req, res);
 });
 
